# Json-Editor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  bundle.js  index.html
.claude/: claude.md
.github/workflows/: ci.yml
src/: app.rs  input.rs  lib.rs  main.rs  state.rs
src/json_editor/: editor.rs  graph.rs  minimap.rs  mod.rs
src/platform/: common.rs  desktop.rs  mod.rs  wasm.rs
src/renderer/: canvas.rs  mod.rs  shader.wgsl
src/ui/: app.rs  mod.rs
src/utils/: logging.rs  mod.rs
tests/: integration_test.rs
web/: index.html  index.js  package-lock.json  package.json  webpack.config.js
