[package]
name = "wgpu-canvas-editor"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["cheolcheol <zl6863vk@gmail.com>"]
description = "A high-performance cross-platform canvas editor built with Rust and wgpu"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wgpu-canvas-editor"
path = "src/main.rs"

[dependencies]
# Core graphics
wgpu = "22.1"
bytemuck = { version = "1.18", features = ["derive"] }

# Window management (desktop)
winit = { version = "0.30", features = ["rwh_05"] }

# Async runtime
pollster = "0.3"

# Logging
env_logger = "0.11"
log = "0.4"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "console",
] }
console_error_panic_hook = "0.1"
console_log = "1.0"

[dev-dependencies]
assert_matches = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3

# Optimize WASM binary size
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
